--- a/front/src/app/pages/articles-list/articles.component.scss
+++ b/front/src/app/pages/articles-list/articles.component.scss
@@ -1,4 +1,5 @@
 .articles-page {
+  background: ffffff;
   padding: 2rem 0 0 0;
   max-width: 1050px;
   min-height: calc(100vh - 64px);
@@ -25,7 +26,7 @@
 }
 
 .article-card {
-  background: #ffffff;
+  background: rgb(219, 219, 219);
   border-radius: 1.5rem;
   box-shadow: 0 4px 24px rgba(80, 32, 143, 0.09);
   padding: 1.5rem 1.5rem 1.5rem 1.5rem;
