--- a/front/src/app/pages/auth-login/login.component.html
+++ b/front/src/app/pages/auth-login/login.component.html
@@ -1,3 +1,7 @@
+  <div class="mobile-only logo-container">
+  <img src="/assets/logo_p6.png" alt="MDD Logo" class="logo-mobile" />
+</div>
+  
   <button mat-icon-button class="back-btn" (click)="goBack()" aria-label="Retour">
   <mat-icon>arrow_back</mat-icon>
   </button>
